# crm.smarterbot.cl

./: .env.local  IMPLEMENTATION_PLAN.md  MCP_SETUP.md  PRODUCTION_SECURITY_CHECKLIST.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  run_all.sh  tailwind.config.js  tailwind.config.ts  test-tailwind.css  vercel.json
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/calendario/: page.tsx
app/chat/: page.tsx
app/clientes/: page.tsx
app/configuracion/: page.tsx
app/demo/: page.tsx
app/estadisticas/: page.tsx
app/forgot-password/: page.tsx
app/login/: login-form.tsx  page.tsx
app/register/: page.tsx
app/reset-password/: page.tsx
app/seed-database/: page.tsx
backend/: Dockerfile  docker-compose.yml  ecosystem.config.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/routers/: auth.py
backend/app/schemas/: user.py
backend/app/services/: onboarding.py
components/: UserProfileMenu.tsx  app-layout.tsx  gemini-chat.tsx  user-profile.tsx
contexts/: auth-context.tsx
hooks/: use-require-auth.ts
lib/: api-client.ts  seed-data.ts  supabase-browser.ts  supabase-client.ts  supabase-server.ts  supabase.ts
lib/services/: calendar-service.ts  chatwoot-service.ts  client-service.ts  statistics-service.ts  whatsapp-service.ts
mcp/: spec-v0.1.md
mcp/core/: prompts.json  tools.json
public/: test.css
scripts/: check-user.mjs
src/: middleware.ts
styles/: dashboard.css
supabase/: config.toml
types/: supabase.ts
(+31 files in other folders)
